# melissa

./: .gitignore  CMakeLists.txt  README.md
codegen/kidl/: waypoint_descriptor.yaml
modules/: CMakeLists.txt
modules/app_info/: instructions.sh  klepsydra_projects.csv  kpsr_comp.sh
modules/codegen/: CMakeLists.txt
modules/codegen/kidl/: waypoint_descriptor.yaml
modules/config/yaml/: image.yaml  navigation.yaml  qb_config.yaml  qb_config_2.yaml  rb_config.yaml  rb_config_2.yaml
modules/mem_application/: CMakeLists.txt
modules/mem_application/src/: mem_application.cpp
modules/queen_bee/: CMakeLists.txt
modules/queen_bee/include/: queen_bee.h
modules/queen_bee/src/: queen_bee.cpp
modules/robo_bee/: CMakeLists.txt
modules/robo_bee/include/: robo_bee.h
modules/robo_bee/src/: robo_bee.cpp
modules/services/: CMakeLists.txt
modules/services/queen_bee_svc/: CMakeLists.txt
modules/services/queen_bee_svc/include/: queen_bee_svc.h
modules/services/queen_bee_svc/src/: queen_bee_svc.cpp
modules/services/robo_bee_svc/: CMakeLists.txt
modules/services/robo_bee_svc/include/: file_utils.h  robo_bee_svc.h
modules/services/robo_bee_svc/src/: file_utils.cpp  robo_bee_svc.cpp
modules/zmq_application/: CMakeLists.txt
modules/zmq_application/common/: config.h
modules/zmq_application/qb_application/: CMakeLists.txt
modules/zmq_application/qb_application/include/: zmq_middleware_facility.h
modules/zmq_application/qb_application/src/: qb_application.cpp  zmq_middleware_facility.cpp
modules/zmq_application/rb_appplication/: CMakeLists.txt
modules/zmq_application/rb_appplication/src/: rb_application.cpp
modules/zmq_application/src/: zmq_application.cpp
modules/zmq_application/zmq_utils/: CMakeLists.txt
modules/zmq_application/zmq_utils/include/: waypoint_zmq_serializer.h  zmq_middleware_facility.h
modules/zmq_application/zmq_utils/src/: zmq_middleware_facility.cpp
tests/: CMakeLists.txt
tests/queen_bee_test/: CMakeLists.txt
tests/queen_bee_test/src/: queen_bee_test.cpp
tests/robo_bee_test/: CMakeLists.txt
tests/robo_bee_test/src/: robo_bee_test.cpp
tests/services_test/: CMakeLists.txt
tests/services_test/queen_bee_svc_test/: CMakeLists.txt
tests/services_test/queen_bee_svc_test/src/: queen_bee_svc_test.cpp
tests/services_test/robo_bee_svc_test/: CMakeLists.txt
tests/services_test/robo_bee_svc_test/src/: robo_bee_svc_test.cpp
